# printeachpts

./: CMakeLists.txt  main.c
